[package]
name = "aerox_macro"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["aerox_network Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aojiaoxiaolinlin/game_server"
description = "aerox_macro"
categories = ["network-programming"]
keywords = ["aerox_macro","AeroX"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
